# unraid-admin

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json
docs/screenshots/: README.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: connection.rs  crypto.rs  docker_stats.rs  graphql.rs  lib.rs  main.rs  notification_stream.rs
src/components/: Copyable.tsx  ErrorNotice.tsx  GroupedList.tsx  Loading.tsx  Meter.tsx  MiniCard.tsx  Native.tsx  Sidebar.tsx  StatusDot.tsx  TopBar.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  nb.json
src/lib/: api.ts  appearance.tsx  docker-parse.ts  format.ts  notificationSettings.tsx  notificationWatcher.ts  notifications.ts  queries.ts  settings.tsx  types.ts  ui.ts  useDockerStats.ts  useNotificationStream.ts
src/pages/: Dashboard.tsx  Docker.tsx  Notifications.tsx  Settings.tsx  Setup.tsx  Shares.tsx  Vms.tsx
